# KindleBridge

./: .gitattributes  .gitignore  CONTEXT.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  STATUS.md
.github/workflows/: ci.yml
crates/kindlebridge-bundle/: Cargo.toml
crates/kindlebridge-bundle/src/: activation.rs  builder.rs  cbor.rs  device_install.rs  error.rs  header.rs  install.rs  lib.rs  model.rs  path.rs  project.rs  verify.rs
crates/kindlebridge-linux-aio/: Cargo.toml
crates/kindlebridge-linux-aio/src/: lib.rs
crates/kindlebridge-schema/: Cargo.toml
crates/kindlebridge-schema/src/: device_protocol.rs  device_rpc.rs  host_rpc.rs  lib.rs  shell_protocol.rs  sync_path.rs
crates/kindlebridge-schema/tests/: shell_protocol.rs  sync_path.rs
crates/kindlebridge-transport/: Cargo.toml
crates/kindlebridge-transport-tcp/: Cargo.toml
crates/kindlebridge-transport-tcp/src/: config.rs  error.rs  framing.rs  lib.rs  tcp.rs  tests.rs
crates/kindlebridge-transport-usb/: Cargo.toml  README.md
crates/kindlebridge-transport-usb/src/: lib.rs
crates/kindlebridge-transport/src/: actor.rs  lib.rs
crates/kindlebridge-transport/tests/: connection_actor.rs
crates/kindlebridge-wire/: Cargo.toml
crates/kindlebridge-wire/src/: error.rs  frame.rs  lib.rs  state.rs  tests.rs
device/kindlebridge-broker/: Cargo.toml
device/kindlebridge-broker/src/: lib.rs  main.rs
device/kindlebridge-device-bench/: Cargo.toml
device/kindlebridge-device-bench/src/: main.rs
device/kindlebridge-functionfs/: Cargo.toml  README.md
device/kindlebridge-functionfs/src/: descriptors.rs  event.rs  lib.rs  probe.rs  tests.rs
device/kindlebridge-launcher/: Cargo.toml
device/kindlebridge-launcher/src/: fs_safe.rs  lib.rs  main.rs  manifest.rs  system.rs  update.rs  watchdog.rs
device/kindlebridged/: Cargo.toml
device/kindlebridged/src/: app.rs  application.rs  exec.rs  heartbeat.rs  lib.rs  main.rs  probe.rs  server.rs  services.rs  shell.rs  shell_stream.rs  sync.rs  sync_stream.rs
device/kindlebridged/src/application/: backend.rs
device/kindlebridged/src/server/: rpc.rs
device/kindlebridged/tests/: app_runner.rs  shell_worker.rs
docs/: naming.md  windows-winusb-onboarding.md
docs/hardware-lab/: kt6-5.17.1.0.4.md
examples/hello/: .gitignore  kindlebridge.toml
host/kindlebridge/: Cargo.toml
host/kindlebridge-local/: Cargo.toml
host/kindlebridge-local/src/: lib.rs  lifecycle.rs
host/kindlebridge-server/: Cargo.toml
host/kindlebridge-server/src/: client_runtime.rs  device_registry.rs  device_session.rs  host_rpc.rs  lib.rs  main.rs  runtime.rs  sync_operation.rs
host/kindlebridge-server/src/client_runtime/: sync_operations.rs
host/kindlebridge-server/src/device_session/: sync_client.rs
host/kindlebridge/src/: app.rs  development.rs  lib.rs  main.rs  shell.rs  sync.rs  sync_tree.rs
host/kindlebridge/tests/: json_contract.rs
packaging/: build-mrpi-dev.ps1
packaging/kindlehf/: README.md  install.sh  start.sh  stop.sh  uninstall.sh
packaging/mrpi/: README.md  install.sh  uninstall.sh
packaging/mrpi/payload/extensions/kindlebridge/: config.xml  menu.json
packaging/mrpi/payload/kindlebridge/runtime/slots/A/: slot.manifest
packaging/mrpi/payload/kindlebridge/runtime/slots/B/: slot.manifest
scripts/: build-kindlehf.ps1  check-release-contract.ps1  install-windows-winusb.ps1  test-shell.sh  test.ps1
scripts/archive/: README.md  unsafe-kt6-usb-lab.sh
scripts/hardware/: accept-control-latency.ps1  accept-pty-resize.ps1  accept-shell-latency.ps1  accept-usb-mode-cycles.ps1  accept-usb-session-reconnect.ps1  exercise-live-window-resize.ps1  usb-mode-cycle-gate.sh
tests/: mrpi-installer.sh  usb-mode-lifecycle.sh
tests/fake-device/: Cargo.toml
tests/fake-device/src/: lib.rs  main.rs
tests/fake-device/tests/: stdio_e2e.rs
tests/fixtures/hello/: kindlebridge.toml
tests/fixtures/lifecycle/: kindlebridge.toml
tests/fixtures/lifecycle-v2/: kindlebridge.toml
tests/fixtures/restart-on-failure/: kindlebridge.toml
tests/fixtures/stubborn/: kindlebridge.toml
tests/fixtures/usb-mode/: cleanup-process-tree.sh  fake-command.sh  kindlebridge-launcher  kindlebridged  same-name-launcher
tools/kindlebridge-tcp-probe/: Cargo.toml
tools/kindlebridge-tcp-probe/src/: main.rs
tools/kindlebridge-usb-bench/: Cargo.toml
tools/kindlebridge-usb-bench/src/: main.rs
