[package]
name = "kindlebridge-bundle"
description = "Bounded KindleBridge Bundle parser, builder, and verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
unicode-normalization = "0.1"
walkdir = "2.5"
zstd = "0.13"

[lints]
workspace = true
