[package]
name = "kindlebridge-bundle"
description = "Bounded KindleBridge Bundle parser, builder, and verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["full"]
full = [
    "activation-store",
    "builder",
    "dep:clap",
    "dep:rand_core",
    "dep:serde_json",
    "dep:toml",
    "dep:walkdir",
]
activation-store = []
verify = [
    "dep:crc32c",
    "dep:ed25519-dalek",
    "dep:semver",
    "dep:zstd",
]
builder = ["verify"]

[dependencies]
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"], optional = true }
crc32c = { version = "0.6", optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
semver = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
toml = { version = "0.8", optional = true }
unicode-normalization = "0.1"
walkdir = { version = "2.5", optional = true }
zstd = { version = "0.13", optional = true }

[[bin]]
name = "kindlebridge-bundle"
path = "src/bin/kindlebridge-bundle.rs"
required-features = ["full"]

[lints]
workspace = true
