[package]
name = "kindlebridge-linux-aio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2.186"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "allow"
