[package]
name = "kindlebridge-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kindlebridge-wire = { path = "../kindlebridge-wire" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
unicode-normalization = "0.1"

[lints]
workspace = true
