[package]
name = "kindlebridge-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kindlebridge-schema = { path = "../kindlebridge-schema" }
kindlebridge-wire = { path = "../kindlebridge-wire" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[lints]
workspace = true
