[package]
name = "kindlebridge-functionfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kindlebridge-transport-tcp = { path = "../../crates/kindlebridge-transport-tcp" }
kindlebridge-wire = { path = "../../crates/kindlebridge-wire" }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["event", "fs"] }

[lints]
workspace = true
