[package]
name = "kindlebridge-launcher"
description = "Root-confined A/B launcher and watchdog core for KindleBridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "kindlebridge_launcher"

[[bin]]
name = "kindlebridge-launcher"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
