[package]
name = "kindlebridged"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
kindlebridge-schema = { path = "../../crates/kindlebridge-schema" }
kindlebridge-transport-tcp = { path = "../../crates/kindlebridge-transport-tcp" }
kindlebridge-wire = { path = "../../crates/kindlebridge-wire" }
kindlebridge-broker = { path = "../kindlebridge-broker" }
kindlebridge-functionfs = { path = "../kindlebridge-functionfs" }
kindlebridge-launcher = { path = "../kindlebridge-launcher" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unicode-normalization = "0.1"

[lints]
workspace = true
