[package]
name = "kindlebridged"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
blake3 = { version = "1.8", features = ["neon"] }
clap = { version = "4.5", features = ["derive"] }
kindlebridge-schema = { path = "../../crates/kindlebridge-schema" }
kindlebridge-transport = { path = "../../crates/kindlebridge-transport" }
kindlebridge-transport-tcp = { path = "../../crates/kindlebridge-transport-tcp" }
kindlebridge-wire = { path = "../../crates/kindlebridge-wire" }
kindlebridge-broker = { path = "../kindlebridge-broker" }
kindlebridge-bundle = { path = "../../crates/kindlebridge-bundle", default-features = false, features = ["activation-store", "verify"] }
kindlebridge-functionfs = { path = "../kindlebridge-functionfs" }
kindlebridge-launcher = { path = "../kindlebridge-launcher" }
portable-pty = "=0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process", "signal"] }

[dev-dependencies]
ed25519-dalek = "2.1"
kindlebridge-bundle = { path = "../../crates/kindlebridge-bundle", features = ["builder"] }

[lints]
workspace = true
