[package]
name = "kindlebridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive", "env"] }
kindlebridge-schema = { path = "../../crates/kindlebridge-schema" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

[lints]
workspace = true

[[test]]
name = "json_contract"
path = "tests/json_contract.rs"
harness = false
