[package]
name = "kindlebridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
interprocess = "=2.4.2"
kindlebridge-bundle = { path = "../../crates/kindlebridge-bundle" }
kindlebridge-schema = { path = "../../crates/kindlebridge-schema" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"

[lints]
workspace = true

[[test]]
name = "json_contract"
path = "tests/json_contract.rs"
harness = false
