[package]
name = "kindlebridge-fake-device"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kindlebridge-schema = { path = "../../crates/kindlebridge-schema" }
kindlebridge-server = { path = "../../host/kindlebridge-server" }
serde_json = "1.0"

[dev-dependencies]
ed25519-dalek = "2.1"
kindlebridge = { path = "../../host/kindlebridge" }
kindlebridge-bundle = { path = "../../crates/kindlebridge-bundle", features = ["builder"] }

[lints]
workspace = true
