[package]
name = "kindlebridge-usb-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
kindlebridge-transport-tcp = { path = "../../crates/kindlebridge-transport-tcp" }
kindlebridge-transport-usb = { path = "../../crates/kindlebridge-transport-usb" }
kindlebridge-wire = { path = "../../crates/kindlebridge-wire" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
